--- a/econcalendar.html
+++ b/econcalendar.html
@@ -4,7 +4,7 @@
   <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/" rel="noopener nofollow" target="_blank"><span class="blue-text">Track all markets on TradingView</span></a></div>
   <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-events.js" async>
   {
-  "colorTheme": "light",
+  "colorTheme": "dark",
   "isTransparent": false,
   "width": "400",
   "height": "550",
